made setup more reproducible

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ example/output/jai-test.pdb
 example/output/raylib.dll
 example/output/layout-new.pdb
 example/output/layout-new.dll
+/example/output
